# alderlake-e-cores

./: Cargo.toml  LICENSE.md  Makefile  README.md
.github/res/: doc_redirect.html
.github/workflows/: build_test.yml  publish_docs.yml
benches/: my_benchmark.rs
src/: bin.rs  lib.rs
